--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <form id="currency-form">
                         <div class="form-group">
                             <label for="base-currency">Base Currency</label>
-                            <input type="text" id="base-currency" class="form-control">
+                            <input type="text" id="base-currency-input" class="form-control">
                         </div>
                         <div class="form-group">
-                                <label for="target-currency">Target Currency</label>
-                                <input type="text" id="target-currency" class="form-control">
+                            <label for="target-currency">Target Currency</label>
+                            <input type="text" id="target-currency-input" class="form-control">
                         </div>
                     </form>
                 </div>
